--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -88,11 +88,11 @@ jobs:
          
       - name: Stop and remove container if running
         run: |
-         docker ps -q --filter "name=Text_Summarization" | grep -q . && docker stop Text_Summarization && docker rm -fv Text_Summarization
+         docker ps -q --filter "name=textsummarization" | grep -q . && docker stop textsummarization && docker rm -fv textsummarization
        
       - name: Run Docker Image to serve users
         run: |
-         docker run -d -p 8080:8080 --name=Text_Summarization -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         docker run -d -p 8080:8080 --name=textsummarization -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
       - name: Clean previous images and containers
         run: |
          docker system prune -f
